--- a/client/src/public/Index.html
+++ b/client/src/public/Index.html
@@ -1,26 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>The Hot Dog Aquarium</title>
-    <link href="https://fonts.googleapis.com/css?family=Bangers|Fjalla+One" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="/css/foundation.min.css">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/style.css">
+    <title>YouTube Clipper</title>
   </head>
   <body>
-    
-    <main id="app"></main>
-
-    <!--<script src="https://npmcdn.com/react@15.3.1/dist/react.js"></script>
-    <script src="https://npmcdn.com/react-dom@15.3.1/dist/react-dom.js"></script>
-    <script src="https://npmcdn.com/babel-core@5.8.38/browser.min.js"></script>-->
-    <!--<script type="text/babel" src="../components/NavBar.js"></script>
-    <script type="text/babel" src="../components/PlayerWindow.js"></script>
-    <script type="text/babel" src="../components/App.js"></script>-->
-
-    <script src="/models/lib/jquery.js"></script>
-    <script src="/models/lib/foundation.min.js"></script>
-
-    <script src="/app-bundle.js"></script>
+    <div id="app"></main>
   </body>
 </html>
