--- a/client/src/public/Index.html
+++ b/client/src/public/Index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>YouTube Clipper</title>
+    <title>YouTube Mashup</title>
   </head>
   <body>
     <div id="app"></main>
